deployments/kustomize/overlays/openshift/images/base/api/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-deployment
  labels:
    app.kubernetes.io/part-of: gdx-agreements-tracker
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/component: backend
    app.openshift.io/connects-to: coreDB
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        connection: net-database-client
    spec:
      volumes:
        - name: postgres-secrets-volume
          secret:
            secretName: secrets
            items:
              - key: POSTGRES_PASSWORD
                path: postgres_password
            defaultMode: 420
      containers:
        - name: api
          image: bcgovgdx/gdx-agreements-tracker-api-run
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: postgres-secrets-volume
              readOnly: true
              mountPath: /run/secrets/postgres_password
              subPath: postgres_password
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 1
              memory: 2Gi
