deployments/kustomize/overlays/openshift/images/base/api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-service
  annotations:
    description: Api service 
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
