deployments/kustomize/overlays/openshift/images/base/api/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api-route
  annotations:
    description: The Route for the React application.
    # Rewrite /api to / so that when the node container sees the request, every request to /api/blah is instead to /blah
    haproxy.router.openshift.io/rewrite-target: /
spec:
  host: localhost:8080
  path: /api
  wildcardPolicy: None
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pmo-api-service
    weight: 100
